<resources>
    <string name="app_name">myPassword</string>
    <string name="text_new_app_key">Create New App Key</string>
    <string name="hint_field_new_app_key">New App Key</string>
    <string name="hint_field_confirmed_app_key">Confirm App Key</string>
    <string name="text_confirm_app_key">Confirm</string>
    <string name="text_protect_your_app">Protect your app using App Key</string>
    <string name="text_enter_your_app_key">Enter your App Key</string>
    <string name="text_enter_your_correct_app_key_to_continue">Enter your correct App Key to continue</string>
    <string name="hint_field_app_key">App Key</string>
    <string name="error_empty_app_key">App Key is Empty</string>
    <string name="error_empty_confirmed_app_key">Confirmed App Key is Empty</string>
    <string name="error_app_key_not_match">App Key does not match !</string>
    <string name="error_text_app_key_not_correct">App key is not correct !</string>
    <string name="text_click_me">Click Me !</string>
    <string name="text_change_app_key">Change App Key</string>
    <string name="text_menu_delete_item">Delete</string>
    <string name="text_menu_edit_item">Edit</string>
    <string name="text_menu_change_app_key">Change App Key</string>
    <string name="text_error_password_list_empty">Your password list is empty</string>

    <string name="text_hint_app_name">App Name</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_username">Username</string>
    <string name="hint_field_password">Account Password</string>
    <string name="hint_field_desc">Additional Notes</string>
    <string name="text_toolbar_edit">Edit Password</string>
    <string name="text_toolbar_insert">Create New Password</string>
    <string name="text_error_empty_app_name">App Name cannot be Empty</string>
    <string name="text_error_empty_email">Email cannot be empty</string>
    <string name="text_error_empty_username">Username cannot be empty</string>
    <string name="text_error_empty_password">Password cannot be empty</string>
    <string name="text_save">Save</string>
</resources>